listing services updated